--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/add_menu_item"
-        android:icon="@drawable/ic_add_note"
+        android:icon="@drawable/ic_add_note_2"
         android:title="Item"
         app:showAsAction="always" />
     <item
